# malicious-prompt-detection

./: README.md  binary_classification.py  embedding.py  pyproject.toml  visualization.py
dataset/: README.md
embeddings/: README.md
notebooks/: ddbi.csv  eh.csv  evals.ipynb  evals2.ipynb  fdpi.csv  get_preds.py  mspim.csv  pdb.csv  pdbv2.csv
