[tool.poetry]
name = "malicious-prompt-detection"
version = "0.1.0"
description = ""
authors = ["shubhobm <zoom.subha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.41.2"
torch = "^2.3.1"
datasets = "^2.20.0"
tqdm = "^4.66.4"
ipywidgets = "^8.1.3"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
